--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/xwikivars.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/xwikivars.vm
@@ -14,13 +14,13 @@
 #set ($reservedSpaceName = 'SpaceReservedForInternalXWikiUsagejDGER5nj3KOE5ouUFUc7OYru')
 #set ($reservedDocumentName = 'DocumentReservedForInternalXWikiUsageMK9DxecV0XcDGnIeqzNDB4K')
 #set ($hasCreateSpace = $xwiki.hasAccessLevel('edit', "${reservedSpaceName}.DocumentReservedForInternalXWikiUsage"))
-#set ($reservedDocumentReference = $services.model.createDocumentReference($doc.wiki, $doc.space, $reservedDocumentName))
+#set ($reservedDocumentReference = $services.model.resolveDocument($reservedDocumentName))
 #set ($hasCreatePage = $xwiki.hasAccessLevel('edit', $services.model.serialize($reservedDocumentReference, 'default')))
 #set ($hasGlobalAdmin = $xwiki.hasAccessLevel('admin', $xcontext.user, 'XWiki.XWikiPreferences'))
 ## Note: The document name is not internally used to determine if a user has programming access level. We pass XWiki.XWikiPreferences for consistency with the call for global admin
 #set ($hasProgramming = $xwiki.hasAccessLevel('programming', $xcontext.user, 'XWiki.XWikiPreferences'))
 #set ($hasCreateWiki = $xwiki.hasAccessLevel('createwiki', 'XWiki.XWikiPreferences'))
-#set ($spacePreferencesDocumentReference = $services.model.createDocumentReference($doc.wiki, $doc.space, 'WebPreferences'))
+#set ($spacePreferencesDocumentReference = $services.model.resolveDocument('WebPreferences'))
 #set ($hasSpaceAdmin = $xwiki.hasAccessLevel('admin', $xcontext.user, $services.model.serialize($spacePreferencesDocumentReference, 'default')))
 #set ($hasWatch = $services.watchlist && !$isGuest && !$isSuperAdmin && $xwiki.exists($services.model.serialize($services.model.createDocumentReference($xcontext.database, 'XWiki', 'XWikiUserWatchListSheet'), 'local')))
 #set ($hasDashboard = $xwiki.exists($services.model.serialize($services.model.createDocumentReference($xcontext.database, 'Dashboard', 'XWikiUserDashboardSheet'), 'local')))
