XWIKI-12466: Bad display of menus when the page does not exist. XWIKI-12479: Some LayoutVariables are not handled anymore.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/docdoesnotexist.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/docdoesnotexist.vm
@@ -8,8 +8,13 @@
   $response.setStatus(404)
   #template("startpage.vm")
   <div class="main">
-  <div id="contentmenu" class="actionmenu">
-    #template("menus_content.vm")
+  <div class="row">
+    <div id="contentmenu" class="actionmenu col-xs-12">
+      #template("menus_content.vm")
+    </div>
+    #if ($displayMoreActionsMenu)
+      <hr />
+    #end
   </div>
   <div id="mainContentArea">
   #if($xwiki.exists("XWiki.DocumentDoesNotExist"))
