XWIKI-12478: pdf.vm and content.vm templates are using Legacy OldCore API

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/contentview.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/contentview.vm
@@ -67,7 +67,7 @@ $services.progress.endStep()
 #if ($doc.syntax.toIdString() == 'xwiki/1.0')
 $services.progress.startStep('Display the footnotes')
 #set($footnotes = "#putFootnotes()")
-$xwiki.renderText($footnotes, $doc)
+$doc.getRenderedContent($footnotes, 'xwiki/1.0')
 $services.progress.endStep()
 #end
 
