--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/pdf.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/pdf.vm
@@ -42,7 +42,7 @@
 ## TODO: move that in a place common to old and new rendering footnotes
 #if ($doc.syntax.toIdString() == 'xwiki/1.0')
 #set($footnotes = "#putFootnotes()")
-$xwiki.renderText($footnotes, $doc)
+$doc.getRenderedContent($footnotes, 'xwiki/1.0')
 #end
 #if ("$!{request.comments}" == '1')
   #template("comments2.vm")
