--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/select/select.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/select/select.css
@@ -1,11 +1,10 @@
-## TODO: use the xwiki select widget: http://jira.xwiki.org/browse/XWIKI-12503
 #template('colorThemeInit.vm')
 
-.xwiki-flavor-picker {
+.xwiki-select {
   clear: both;
 }
 
-.xwiki-flavor-picker-results-container {
+.xwiki-select-options {
   border: 1px solid #CCC;
   border-radius: 4px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset;
@@ -14,23 +13,23 @@
   overflow-y: scroll;
 }
 
-.xwiki-flavor-picker-small .xwiki-flavor-picker-results-container {
+.xwiki-select-small .xwiki-select-options {
   height: 200px;
 }
 
-.xwiki-flavor-picker-medium .xwiki-flavor-picker-results-container {
+.xwiki-select-medium .xwiki-select-options {
   height: 400px;
 }
 
-.xwiki-flavor-picker-tall .xwiki-flavor-picker-results-container {
+.xwiki-select-tall .xwiki-select-options {
   height: 800px;
 }
 
-.xwiki-flavor-picker-option input[type="radio"] {
+.xwiki-select-option input[type="radio"] {
   display: none;
 }
 
-.xwiki-flavor-picker-option {
+.xwiki-select-option {
   float: left;
   padding: 5px;
   width: 50%;
@@ -39,50 +38,46 @@
 }
 
 /* Make sure we create a new line every 2 items (like a grid) */
-.xwiki-flavor-picker-option:nth-child(2n+1) {
+.xwiki-select-option:nth-child(2n+1) {
   clear: both;
 }
 
-.xwiki-flavor-picker-option-selected {
+.xwiki-select-option-selected {
   background-color: $theme.highlightColor;
   border: 1px dotted #CCC;
 }
 
-.xwiki-flavor-picker-option, .xwiki-flavor-picker-option > label {
+.xwiki-select-option, .xwiki-select-option > label {
   cursor: pointer;
 }
 
-.xwiki-flavor-picker-option-icon {
+.xwiki-select-option-icon {
   display: table-cell;
   font-size: 30px;
   padding-right: 10px;
   vertical-align: text-top;
 }
 
-.xwiki-flavor-picker-option > div{
+.xwiki-select-option > div{
   display: table-cell;
   vertical-align: top;
 }
 
-.xwiki-flavor-picker-option-icon > img{
+.xwiki-select-option-icon > img{
   height: 20px;
   width: 20px;
 }
 
-.xwiki-flavor-picker-option:hover {
+.xwiki-select-option:hover {
   background-color: $theme.highlightColor;
 }
 
-.xwiki-flavor-picker ul {
+.xwiki-select ul {
   list-style-type: none;
   margin: 0;
   padding-left: 0;
 }
 
-.xwiki-flavor-picker .paginationFilter {
-  clear: both;
-}
-
-.skin-colibri .xwiki-flavor-picker-option {
+.skin-colibri .xwiki-select-option {
   width: 47%;
 }
