XWIKI-12501: Create a generic XWiki Select Widget.
* Add a 'data' parameter to each option of the selector.
* Fix

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/widgets/select/select.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/widgets/select/select.css
@@ -37,6 +37,10 @@
   list-style-type: none;
 }
 
+.xwiki-select-options > ul > li {
+  clear: both;
+}
+
 /* Make sure we create a new line every 2 items (like a grid) */
 .xwiki-select-option:nth-child(2n+1) {
   clear: both;
