--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
@@ -80,67 +80,58 @@
 ## ---------------------------------------------------------------------------------------------------------
 
 ## ---------------------------------------------------------------------------------------------------------
-## Macro for displaying the available templates and changing target space rules accordingly
+## Macro for displaying the available types and templates and changing target space rules accordingly
 ## ---------------------------------------------------------------------------------------------------------
-#macro (displayTemplateChoice)
-    ## ---------------------------------------------------------------------------------------------------------
-    ## Template field
-    ## ---------------------------------------------------------------------------------------------------------
-    #if(!$availableTemplateProviders.isEmpty() && $template == '')
-      <dl>
-        <dt>
-          <label>$services.localization.render('core.create.template')</label>
-          <span class='xHint'>$services.localization.render('core.create.page.template.hint')</span>
-        </dt>
-        <dd>
-          <label for='xwiki-create-form-0' class='xwiki-form-listclass'>
-            <input id='xwiki-create-form-0' type='radio' name='templateprovider' value='' checked='checked' data-allowed-spaces='[]' data-allowed-spaces-message=''/>
-            $services.localization.render('core.create.page.template.empty')
-          </label>
-          #foreach($tpdoc in $availableTemplateProviders)
-            #set ($tpobj = $tpdoc.getObject('XWiki.TemplateProviderClass'))
-            ##
-            ## Extract and save in data-* attributes list of allowed spaces to be used in the JavaScript validation of the spaceReference input.
-            ##
-            #set($jsAllowedSpacesArray = '[]')## Reset any previous value
-            #set($allowedSpaces = $tpobj.getProperty('spaces').getValue())
-            #if($allowedSpaces.size() > 0)
-              #set($jsAllowedSpacesArray = $jsontool.serialize($allowedSpaces))
-            #end
-            ## Compute the error message.
-            #if($allowedSpaces.isEmpty())
-              #set($message = '')
-            #elseif($allowedSpaces.size() == 1)
-              #set($message = $services.localization.render('core.create.template.allowedspace.inline', [$tpobj.getProperty('name').getValue(), $jsAllowedSpacesArray]))
-            #else
-              #set($message = $services.localization.render('core.create.template.allowedspaces.inline', [$tpobj.getProperty('name').getValue(), $jsAllowedSpacesArray]))
-            #end
-            ##
-            ## Display the template provider field option in the form.
-            ##
-            #set($inputId = "xwiki-create-form-${velocityCount}")
-            <label for="$inputId" class='xwiki-form-listclass'>
-              ## pass the template provider to the create action. Prepare the template provider reference
-              #set($tpdocRef = $services.model.serialize($tpdoc.documentReference, 'local'))
-              <input id="$inputId" type='radio' name='templateprovider' value="$escapetool.xml(${tpdocRef})" #if ($templateProvider == $tpdocRef)checked='checked'#end
-                data-allowed-spaces="$escapetool.xml($jsAllowedSpacesArray)" data-allowed-spaces-message="$escapetool.xml($message)"/>
-              ## use the template name as a translation key, to allow i18n
-              $escapetool.xml($services.localization.render($tpobj.getProperty('name').value))
-            </label>
-          #end
-        </dd>
-      </dl>
-    #else
-      #if ($template != '')
-        ## if a template is set (to allow to get the create form from a template directly, without having to choose 
-        ## the template provider), use that template
-        <input type='hidden' id='template' name='template' value="$!{escapetool.xml($template)}" />
-      #else
-        ## finally, if none of these are set, put an empty template provider
-        <input type='hidden' id='templateprovider' name='templateprovider' value='' />
+#macro (displayTypes)
+  #if ($template == '')
+    #set($options = [
+      { 
+        'name': $services.localization.render('core.create.type.default'),
+        'options': [
+          { 'name': $services.localization.render('core.create.type.blank'), 'value': 'blank', 'description': $services.localization.render('core.create.type.blank.description'), 'icon': 'file-white', 'data': {'type': 'blank'}}
+        ]
+      }])
+    #if ($xwiki.exists($services.model.createDocumentReference('', 'XWiki', 'OfficeImporter')))
+      ## TODO: handle this use case with an extension point
+      #set($discard = $options[0].options.add({ 'name': $services.localization.render('office.createForm.type.name'), 'value': 'office', 'description': $services.localization.render('office.createForm.type.description'), 'icon': 'file-word', 'data': {'type':'office'}}))
+    #end
+    #if (!$availableTemplateProviders.isEmpty())
+      #set ($templateOptions = [])
+      #set ($discard = $options.add({'name': $services.localization.render('core.create.type.templates'), 'options': $templateOptions}))
+      #foreach($tpdoc in $availableTemplateProviders)
+        #set ($tpobj = $tpdoc.getObject('XWiki.TemplateProviderClass'))
+        #set ($tpdocRef = $services.model.serialize($tpdoc.documentReference, 'local'))
+        ##
+        ## Extract and save in data-* attributes list of allowed spaces to be used in the JavaScript validation of the spaceReference input.
+        ##
+        #set($jsAllowedSpacesArray = '[]')## Reset any previous value
+        #set($allowedSpaces = $tpobj.getProperty('spaces').getValue())
+        #if($allowedSpaces.size() > 0)
+          #set($jsAllowedSpacesArray = $jsontool.serialize($allowedSpaces))
+        #end
+        ## Compute the error message.
+        #if($allowedSpaces.isEmpty())
+          #set($message = '')
+        #elseif($allowedSpaces.size() == 1)
+          #set($message = $services.localization.render('core.create.template.allowedspace.inline', [$tpobj.getProperty('name').getValue(), $jsAllowedSpacesArray]))
+        #else
+          #set($message = $services.localization.render('core.create.template.allowedspaces.inline', [$tpobj.getProperty('name').getValue(), $jsAllowedSpacesArray]))
+        #end
+        ##
+        ## Display the template provider field option in the form.
+        ##
+        #set ($inputId = "xwiki-create-form-${velocityCount}")
+        #set ($discard = $templateOptions.add({'name': $services.localization.render($tpobj.getProperty('name').value), 'value': "$tpdocRef", 'description': '', 'icon':'file-white', 'data': {'allowed-spaces': $jsAllowedSpacesArray, 'allowed-spaces-message': $message, 'type': 'template'}}))
       #end
     #end
+    <dt><label>$services.localization.render('core.create.type')</label></dt>
+    <dd>#xwikiSelect('type', $options, 'blank', false, 'xwiki-select-small')</dd>
+  #else
+    ## TODO: add the data-allowed-spaces for this template
+    <input type="hidden" name="templateprovider" value="$template" />
+  #end
 #end
+#set ($discard = $xwiki.jsfx.use('js/xwiki/create.js', {'forceSkinAction': true}))
 ## ---------------------------------------------------------------------------------------------------------
 ## Display the form.
 ## ---------------------------------------------------------------------------------------------------------
@@ -216,11 +207,11 @@
     <div class='#if(!$request.ajax)col-xs-12 col-lg-6#end'>
       <dl>
         ## ---------------------------------------------------------------------------------------------------------
-        ## Template field
+        ## Page type
         ## ---------------------------------------------------------------------------------------------------------
-        #displayTemplateChoice()
+        #displayTypes()
         ## ---------------------------------------------------------------------------------------------------------
-        ## Page type - Advanced users
+        ## Terminal page - Advanced users
         ## ---------------------------------------------------------------------------------------------------------
         #if (($isAdvancedUser || $isSuperAdmin) && !$deprecatedSpaceCreate)
           <dt>
