--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/backlinks.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/backlinks.vm
@@ -1,6 +1,25 @@
+#######################################################
+###                BACKLINKS PAGE
+###              ------------------
+#######################################################
+##
+#######################################################
+##                   HEADER
+#######################################################
+#if($request.xpage == 'backlinks')
+  #template("startpage.vm")
+    <div class="main layoutsubsection">
+      <div id="mainContentArea">
+        <div class="xcontent">
+#end
+#######################################################
+##                   TITLE
+#######################################################
 #set($titleToDisplay = $services.localization.render('core.backlinks.title', ["<a href='$doc.getURL()'>$escapetool.xml($doc.plainTitle)</a>"]))
 #template('contentheader.vm')
-
+#######################################################
+##                  CONTENT
+#######################################################
 #set($backLinks = $doc.getBacklinks())
 #if ($backLinks.isEmpty())
   <p>$services.localization.render('core.backlinks.noBackLink')</p>
@@ -12,4 +31,13 @@
       <li><a href="$rdoc.getURL('view')">$escapetool.xml($rdoc.getPlainTitle())</a></li>
     #end
   </ul>
+#end
+#######################################################
+##                   FOOTER
+#######################################################
+#if($request.xpage == 'backlinks')
+        </div> ## xcontent
+      </div> ## mainContentArea
+    </div> ## main
+  #template("endpage.vm")
 #end
